// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`withOpenEvents should attach different event handlers when touch is supported 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input"
    data-openable="true"
    id="my-input"
    inputmode="none"
    name="my-input"
    type="text"
    value="value"
  />
</DocumentFragment>
`;

exports[`withOpenEvents should render correctly 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input"
    data-openable="true"
    id="my-input"
    name="my-input"
    type="text"
    value="value"
  />
</DocumentFragment>
`;

exports[`withOpenEvents should render correctly with "className" prop 1`] = `
<DocumentFragment>
  <input
    aria-invalid="false"
    class="bpk-input my-custom-class"
    data-openable="true"
    id="my-input"
    inputmode="none"
    name="my-input"
    type="text"
    value="value"
  />
</DocumentFragment>
`;
